--- a/user_data/냉장고더미데이터.ipynb
+++ b/user_data/냉장고더미데이터.ipynb
@@ -253,7 +253,7 @@
     "                         days_window=30):\n",
     "    rows = []\n",
     "    for _, u in df_users.iterrows():\n",
-    "        uid = u[\"UserID\"]\n",
+    "        uid = u[\"ID\"]\n",
     "        n = random.randint(min_items, max_items)\n",
     "        chosen = random.sample(items, n)\n",
     "\n",
@@ -270,7 +270,7 @@
     "            )\n",
     "\n",
     "            rows.append({\n",
-    "                \"UserID\": uid,\n",
+    "                \"ID\": uid,\n",
     "                \"재료\": f\"{name}({unit})\",  # 요청: 재료명 뒤에 단위 표기\n",
     "                \"용량\": amount,              # 요청: 수량/무게/부피 값\n",
     "                \"저장일시\": dt.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
@@ -288,7 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "a021e7a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "e7ade1c3",
    "metadata": {},
    "outputs": [
@@ -319,8 +327,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "55c54206",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 생성 완료 → fridge_items_dummy_data.csv  (rows=664)\n",
+      "                              fridge_id        ID      재료    용량  \\\n",
+      "0  34e8a90d-a2dd-4f49-a45c-fdad028ca4c3  jbvhea7d   깻잎(g)   934   \n",
+      "1  8d6d3caf-c80c-45b6-8ccc-1e8b46cd5b66  jbvhea7d   열무(g)  1048   \n",
+      "2  3964b25b-7c10-480d-b76d-787f4ac48fa4  jbvhea7d  고사리(g)   975   \n",
+      "3  0bf29775-fe62-4843-88e4-90de73198475  jbvhea7d  소고기(g)  1055   \n",
+      "4  e4377af5-62bf-4122-b7c3-b90da29c1443  jbvhea7d  오렌지(개)     3   \n",
+      "5  6fb38cf0-b163-450e-adcc-93829bd502f2  jbvhea7d    무(g)   191   \n",
+      "6  9464f7bf-dad2-4690-8dd3-a30ba0577e39  jbvhea7d  고등어(g)    79   \n",
+      "7  b044de5a-76cb-4ed8-85e1-97f9181e4269  jbvhea7d   조개(g)   669   \n",
+      "8  74bbe200-d8e7-41f2-ba4b-282a517020b1  jbvhea7d   피망(g)   157   \n",
+      "9  fbd5230a-2ce3-4362-b702-861216132f2f  xxymh3ma  미나리(g)   251   \n",
+      "\n",
+      "                  저장일시  \n",
+      "0  2025-10-17 06:29:54  \n",
+      "1  2025-10-09 08:16:00  \n",
+      "2  2025-10-02 03:02:14  \n",
+      "3  2025-10-11 08:55:47  \n",
+      "4  2025-10-07 21:31:22  \n",
+      "5  2025-10-16 07:30:07  \n",
+      "6  2025-09-22 18:22:20  \n",
+      "7  2025-10-22 04:18:34  \n",
+      "8  2025-10-15 05:26:08  \n",
+      "9  2025-10-22 00:28:00  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fridge_id</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>재료</th>\n",
+       "      <th>용량</th>\n",
+       "      <th>저장일시</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>34e8a90d-a2dd-4f49-a45c-fdad028ca4c3</td>\n",
+       "      <td>jbvhea7d</td>\n",
+       "      <td>깻잎(g)</td>\n",
+       "      <td>934</td>\n",
+       "      <td>2025-10-17 06:29:54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8d6d3caf-c80c-45b6-8ccc-1e8b46cd5b66</td>\n",
+       "      <td>jbvhea7d</td>\n",
+       "      <td>열무(g)</td>\n",
+       "      <td>1048</td>\n",
+       "      <td>2025-10-09 08:16:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3964b25b-7c10-480d-b76d-787f4ac48fa4</td>\n",
+       "      <td>jbvhea7d</td>\n",
+       "      <td>고사리(g)</td>\n",
+       "      <td>975</td>\n",
+       "      <td>2025-10-02 03:02:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0bf29775-fe62-4843-88e4-90de73198475</td>\n",
+       "      <td>jbvhea7d</td>\n",
+       "      <td>소고기(g)</td>\n",
+       "      <td>1055</td>\n",
+       "      <td>2025-10-11 08:55:47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>e4377af5-62bf-4122-b7c3-b90da29c1443</td>\n",
+       "      <td>jbvhea7d</td>\n",
+       "      <td>오렌지(개)</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2025-10-07 21:31:22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>659</th>\n",
+       "      <td>1b096dc8-0769-46f9-a8c9-6b7f0eb49737</td>\n",
+       "      <td>cqf066jq</td>\n",
+       "      <td>양파(g)</td>\n",
+       "      <td>430</td>\n",
+       "      <td>2025-10-11 20:26:52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>ba58b8fa-0e6b-4009-9756-33859e9ac1b0</td>\n",
+       "      <td>cqf066jq</td>\n",
+       "      <td>소면(개)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2025-10-23 06:39:09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>661</th>\n",
+       "      <td>fe1f104d-542f-4c28-8e4a-af9c7c7116f8</td>\n",
+       "      <td>cqf066jq</td>\n",
+       "      <td>고들빼기(g)</td>\n",
+       "      <td>716</td>\n",
+       "      <td>2025-09-23 21:10:09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>662</th>\n",
+       "      <td>c43b877f-c6bc-491d-9543-8df33d8b77c1</td>\n",
+       "      <td>cqf066jq</td>\n",
+       "      <td>홍고추(g)</td>\n",
+       "      <td>758</td>\n",
+       "      <td>2025-10-02 17:49:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663</th>\n",
+       "      <td>1caece4f-8680-4ce2-89df-cdc492f04147</td>\n",
+       "      <td>cqf066jq</td>\n",
+       "      <td>모짜렐라치즈(g)</td>\n",
+       "      <td>325</td>\n",
+       "      <td>2025-10-13 16:58:06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>664 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                fridge_id        ID         재료    용량  \\\n",
+       "0    34e8a90d-a2dd-4f49-a45c-fdad028ca4c3  jbvhea7d      깻잎(g)   934   \n",
+       "1    8d6d3caf-c80c-45b6-8ccc-1e8b46cd5b66  jbvhea7d      열무(g)  1048   \n",
+       "2    3964b25b-7c10-480d-b76d-787f4ac48fa4  jbvhea7d     고사리(g)   975   \n",
+       "3    0bf29775-fe62-4843-88e4-90de73198475  jbvhea7d     소고기(g)  1055   \n",
+       "4    e4377af5-62bf-4122-b7c3-b90da29c1443  jbvhea7d     오렌지(개)     3   \n",
+       "..                                    ...       ...        ...   ...   \n",
+       "659  1b096dc8-0769-46f9-a8c9-6b7f0eb49737  cqf066jq      양파(g)   430   \n",
+       "660  ba58b8fa-0e6b-4009-9756-33859e9ac1b0  cqf066jq      소면(개)     1   \n",
+       "661  fe1f104d-542f-4c28-8e4a-af9c7c7116f8  cqf066jq    고들빼기(g)   716   \n",
+       "662  c43b877f-c6bc-491d-9543-8df33d8b77c1  cqf066jq     홍고추(g)   758   \n",
+       "663  1caece4f-8680-4ce2-89df-cdc492f04147  cqf066jq  모짜렐라치즈(g)   325   \n",
+       "\n",
+       "                    저장일시  \n",
+       "0    2025-10-17 06:29:54  \n",
+       "1    2025-10-09 08:16:00  \n",
+       "2    2025-10-02 03:02:14  \n",
+       "3    2025-10-11 08:55:47  \n",
+       "4    2025-10-07 21:31:22  \n",
+       "..                   ...  \n",
+       "659  2025-10-11 20:26:52  \n",
+       "660  2025-10-23 06:39:09  \n",
+       "661  2025-09-23 21:10:09  \n",
+       "662  2025-10-02 17:49:03  \n",
+       "663  2025-10-13 16:58:06  \n",
+       "\n",
+       "[664 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import random\n",
+    "import uuid\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# 1) 사용자 목록 로드 (UserID만 쓰면 됨)\n",
+    "users = pd.read_csv(\"user_info_dummy_data.csv\")  # 컬럼에 ID 또는 UserID가 있어야 함\n",
+    "\n",
+    "# 2) 재료 단위 매핑 (양념/소스류 제외)\n",
+    "g_set = {\n",
+    "    '쌀','멥쌀','찹쌀','보리','옥수수','수수','차조','콩','팥','흑미','현미',\n",
+    "    '쇠고기','돼지고기','닭고기','닭가슴살','닭안심','양지머리','돼지갈비','돼지등갈비','갈비','닭살','돼지고기안심','소고기',\n",
+    "    '새우','오징어','문어','조개','홍합','바지락','고등어','연어','도미','굴','낙지','명태','멸치','가리비','모시조개','꽁치','갈치','전복','쭈꾸미','아귀','대하','꽃게',\n",
+    "    '양파','당근','부추','대파','파','배추','양배추','상추','시금치','미나리','애호박','청경채','브로콜리','오이',\n",
+    "    '피망','파프리카','청고추','홍고추','풋고추','쑥갓','우엉','무','고사리','콩나물','숙주','도라지',\n",
+    "    '버섯','표고버섯','팽이버섯','느타리버섯','양송이버섯','목이버섯','청피망','홍피망','깻잎',\n",
+    "    '고구마','감자','치커리','루콜라','샐러리','케일','고들빼기','열무','냉이','고구마줄기','두릅',\n",
+    "    '두부','순두부','콩비지',\n",
+    "    '스파게티면','떡국떡','가래떡','감자전분','방울토마토','치즈','모짜렐라치즈'\n",
+    "}\n",
+    "\n",
+    "ml_set = {'우유', '요거트', '닭육수'}\n",
+    "count_set = {'계란','계란노른자','계란흰자','라면','국수','칼국수면','소면','빵','식빵','모닝빵','바게트','토마토','사과','배','바나나','딸기','포도','오렌지','자몽','레몬'}\n",
+    "can_set = {'옥수수통조림','완두콩통조림'}\n",
+    "\n",
+    "# 단위 사전 구성\n",
+    "INGR_UNIT = {i: 'g' for i in g_set}\n",
+    "INGR_UNIT.update({i: 'ml' for i in ml_set})\n",
+    "INGR_UNIT.update({i: '개' for i in count_set})\n",
+    "INGR_UNIT.update({i: '캔' for i in can_set})\n",
+    "\n",
+    "ALL_INGREDIENTS = list(INGR_UNIT.keys())\n",
+    "\n",
+    "DEFAULT_RANGE_BY_UNIT = {'g': (50, 1200), 'ml': (100, 2000), '개': (1, 8), '캔': (1, 4)}\n",
+    "OVERRIDE_RANGE = {\n",
+    "    '계란': (6, 30), '우유': (200, 2000), '요거트': (100, 1000),\n",
+    "    '식빵': (1, 2), '바게트': (1, 2), '모닝빵': (2, 12), '빵': (1, 3),\n",
+    "    '라면': (1, 6), '국수': (1, 4), '칼국수면': (1, 4), '소면': (1, 4),\n",
+    "    '토마토': (1, 6), '방울토마토': (150, 500),\n",
+    "    '사과': (1, 6), '배': (1, 4), '바나나': (1, 10), '딸기': (1, 4),\n",
+    "    '포도': (1, 4), '오렌지': (1, 6), '자몽': (1, 4), '레몬': (1, 6),\n",
+    "    '두부': (200, 800), '순두부': (300, 1000), '콩비지': (200, 800),\n",
+    "    '쇠고기': (100, 1500), '돼지고기': (100, 1500), '닭고기': (100, 1500),\n",
+    "    '닭가슴살': (100, 1000), '닭안심': (100, 800), '양지머리': (100, 1200),\n",
+    "    '돼지갈비': (200, 2000), '돼지등갈비': (200, 2000), '갈비': (200, 2000), '소고기': (100, 1500),\n",
+    "}\n",
+    "\n",
+    "def sample_amount(name: str, unit: str) -> int:\n",
+    "    if name in OVERRIDE_RANGE:\n",
+    "        lo, hi = OVERRIDE_RANGE[name]\n",
+    "    else:\n",
+    "        lo, hi = DEFAULT_RANGE_BY_UNIT[unit]\n",
+    "    return random.randint(lo, hi)\n",
+    "\n",
+    "def generate_fridge_data(df_users: pd.DataFrame,\n",
+    "                         items: list[str],\n",
+    "                         output=\"fridge_items_dummy_data.csv\",\n",
+    "                         min_items=3,\n",
+    "                         max_items=10,\n",
+    "                         days_window=30):\n",
+    "    rows = []\n",
+    "    for _, u in df_users.iterrows():\n",
+    "        uid = u[\"ID\"]\n",
+    "        n = random.randint(min_items, max_items)\n",
+    "        chosen = random.sample(items, n)\n",
+    "\n",
+    "        for name in chosen:\n",
+    "            unit = INGR_UNIT[name]\n",
+    "            amount = sample_amount(name, unit)\n",
+    "            dt = datetime.now() - timedelta(\n",
+    "                days=random.randint(0, days_window),\n",
+    "                hours=random.randint(0, 23),\n",
+    "                minutes=random.randint(0, 59),\n",
+    "                seconds=random.randint(0, 59)\n",
+    "            )\n",
+    "\n",
+    "            rows.append({\n",
+    "                \"fridge_id\": str(uuid.uuid4()),  # ✅ UUID 추가\n",
+    "                \"ID\": uid,\n",
+    "                \"재료\": f\"{name}({unit})\",\n",
+    "                \"용량\": amount,\n",
+    "                \"저장일시\": dt.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "            })\n",
+    "\n",
+    "    out = pd.DataFrame(rows)\n",
+    "    out.to_csv(output, index=False, encoding=\"utf-8-sig\")\n",
+    "    print(f\"✅ 생성 완료 → {output}  (rows={len(out)})\")\n",
+    "    print(out.head(10))\n",
+    "    return out\n",
+    "\n",
+    "# 실행\n",
+    "generate_fridge_data(users, ALL_INGREDIENTS)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b7d22bc",
    "metadata": {},
    "outputs": [],
    "source": []
