--- a/crawling/만개의레시피_크롤링.ipynb
+++ b/crawling/만개의레시피_크롤링.ipynb
@@ -1515,7 +1515,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hi_ml_env",
+   "display_name": "hipython",
    "language": "python",
    "name": "python3"
   },
@@ -1529,7 +1529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
