--- a/new_food/recipe_data_처리.ipynb
+++ b/new_food/recipe_data_처리.ipynb
@@ -2,165 +2,91 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "d801309c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RECIPE_ID</th>\n",
-       "      <th>IRDNT_SN</th>\n",
-       "      <th>IRDNT_TY_NM</th>\n",
-       "      <th>INGREDIENT_FULL</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>주재료</td>\n",
-       "      <td>쌀 (4컵)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>주재료</td>\n",
-       "      <td>안심 (200g)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>주재료</td>\n",
-       "      <td>콩나물 (20g)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>주재료</td>\n",
-       "      <td>청포묵 (1/2모)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>주재료</td>\n",
-       "      <td>미나리 (20g)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6099</th>\n",
-       "      <td>195453</td>\n",
-       "      <td>195457</td>\n",
-       "      <td>주재료</td>\n",
-       "      <td>호박 (1/2개)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6100</th>\n",
-       "      <td>195453</td>\n",
-       "      <td>195456</td>\n",
-       "      <td>주재료</td>\n",
-       "      <td>대파 (1대)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6101</th>\n",
-       "      <td>195453</td>\n",
-       "      <td>195455</td>\n",
-       "      <td>주재료</td>\n",
-       "      <td>다짐육 (200g)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6102</th>\n",
-       "      <td>195453</td>\n",
-       "      <td>195454</td>\n",
-       "      <td>주재료</td>\n",
-       "      <td>콩비지 (300g)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6103</th>\n",
-       "      <td>195453</td>\n",
-       "      <td>195459</td>\n",
-       "      <td>주재료</td>\n",
-       "      <td>다진마늘 (1T)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6104 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      RECIPE_ID  IRDNT_SN IRDNT_TY_NM INGREDIENT_FULL\n",
-       "0             1         1         주재료          쌀 (4컵)\n",
-       "1             1         2         주재료       안심 (200g)\n",
-       "2             1         3         주재료       콩나물 (20g)\n",
-       "3             1         4         주재료      청포묵 (1/2모)\n",
-       "4             1         5         주재료       미나리 (20g)\n",
-       "...         ...       ...         ...             ...\n",
-       "6099     195453    195457         주재료       호박 (1/2개)\n",
-       "6100     195453    195456         주재료         대파 (1대)\n",
-       "6101     195453    195455         주재료      다짐육 (200g)\n",
-       "6102     195453    195454         주재료      콩비지 (300g)\n",
-       "6103     195453    195459         주재료       다진마늘 (1T)\n",
-       "\n",
-       "[6104 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#recipe_ingredient_info# \n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('recipe_ingredient_info.csv', encoding='utf-8-sig')\n",
-    "df_ing = df.copy()\n",
-    "# 두 컬럼 합치기: '재료명 (용량)' 형태\n",
-    "df_ing['INGREDIENT_FULL'] = df_ing['IRDNT_NM'].astype(str) + ' (' + df_ing['IRDNT_CPCTY'].astype(str) + ')'\n",
-    "\n",
-    "df_ing = df_ing.drop(columns=['IRDNT_NM', 'IRDNT_CPCTY'], errors='ignore')\n",
-    "df_ing"
+    "df_ing = df.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "a77cdb93",
+   "execution_count": 4,
+   "id": "4e541899",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     RECIPE_ID                                    INGREDIENT_FULL\n",
+      "0            1  {'쌀': '4컵', '안심': '200g', '콩나물': '20g', '청포묵':...\n",
+      "1            2  {'멥쌀': '1컵', '찹쌀': '2컵', '수수': '1컵', '차조': '1컵...\n",
+      "2            3  {'당면': '50g', '돼지고기': '100g', '표고버섯': '2장', '호...\n",
+      "3            4  {'쌀': '2컵', '콩나물': '300g', '쇠고기': '100g', '파':...\n",
+      "4            5  {'찹쌀': '3컵', '흑설탕': '1컵', '계핏가루': '1/2큰술', '깐밤...\n",
+      "..         ...                                                ...\n",
+      "570     180330  {'마요네즈': '1T', '식빵': '5쪽', '고구마': '2개(大)', '꿀'...\n",
+      "571     180344  {'양파': '1/8개', '방울토마토': '15알', '밥': '1공기', '달걀...\n",
+      "572     180363  {'중새우': '15마리', '고추장': '2T', '설탕': '1+1/2T', '...\n",
+      "573     195428  {'밥': '3공기', '오이': '1/2개', '통깨': '약간', '마요네즈':...\n",
+      "574     195453  {'계란': '5개', '전분': '1/2T', '부침가루': '1/2T', '소금...\n",
+      "\n",
+      "[575 rows x 2 columns]\n",
+      "      RECIPE_ID  IRDNT_SN IRDNT_NM IRDNT_CPCTY IRDNT_TY_NM\n",
+      "0             1         1        쌀          4컵         주재료\n",
+      "1             1         2       안심        200g         주재료\n",
+      "2             1         3      콩나물         20g         주재료\n",
+      "3             1         4      청포묵        1/2모         주재료\n",
+      "4             1         5      미나리         20g         주재료\n",
+      "...         ...       ...      ...         ...         ...\n",
+      "6099     195453    195457       호박        1/2개         주재료\n",
+      "6100     195453    195456       대파          1대         주재료\n",
+      "6101     195453    195455      다짐육        200g         주재료\n",
+      "6102     195453    195454      콩비지        300g         주재료\n",
+      "6103     195453    195459     다진마늘          1T         주재료\n",
+      "\n",
+      "[6104 rows x 5 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_22968\\3577949454.py:4: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  .apply(lambda x: dict(zip(x[\"IRDNT_NM\"], x[\"IRDNT_CPCTY\"])))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RECIPE_ID별로 묶어서 딕셔너리 생성\n",
+    "ingredient_dicts = (\n",
+    "    df.groupby(\"RECIPE_ID\")\n",
+    "    .apply(lambda x: dict(zip(x[\"IRDNT_NM\"], x[\"IRDNT_CPCTY\"])))\n",
+    "    .reset_index(name=\"INGREDIENT_FULL\")\n",
+    ")\n",
+    "\n",
+    "# 딕셔너리를 문자열로 변환 (JSON 대신 Python dict 형태 유지)\n",
+    "ingredient_dicts[\"INGREDIENT_FULL\"] = ingredient_dicts[\"INGREDIENT_FULL\"].apply(lambda d: str(d).replace('\"', \"'\"))\n",
+    "\n",
+    "# 결과 확인\n",
+    "print(ingredient_dicts)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b0ac89ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# RECIPE_ID별 재료 리스트로 묶기\n",
-    "grouped_final = df_ing.groupby('RECIPE_ID')['INGREDIENT_FULL'].apply(list).reset_index()\n",
-    "grouped_final.to_csv('recipe_ingredient_clean.csv', index=False, encoding='utf-8-sig')\n"
+    "ingredient_dicts.to_csv(\"recipe_ingredient_clean.csv\", index=False, encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -211,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "aee8745b",
    "metadata": {},
    "outputs": [],
@@ -236,7 +162,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
+   "id": "a0ebfe7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final = pd.read_csv('recipe.csv', encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7cede421",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 첫 번째 헤더 순서 기준으로 재정렬\n",
+    "target_order = [\n",
+    "    \"RECIPE_ID\",\n",
+    "    \"RECIPE_NM_KO\",\n",
+    "    \"SERVINGS\",      # ← 순서 이동\n",
+    "    \"TY_NM\",\n",
+    "    \"COOKING_TIME\",\n",
+    "    \"LEVEL_NM\",\n",
+    "    \"IRDNT_CODE\",\n",
+    "    \"INGREDIENT_FULL\",\n",
+    "    \"STEP_TEXT\",\n",
+    "    \"STEP_TIP\"\n",
+    "]\n",
+    "\n",
+    "# 순서 맞추기\n",
+    "final = final[target_order]\n",
+    "\n",
+    "# 확인 후 저장\n",
+    "final.to_csv(\"recipe_reordered.csv\", index=False, encoding=\"utf-8-sig\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "0b5fab71",
    "metadata": {},
    "outputs": [
@@ -244,8 +208,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "recipe_ingredient_clean 테이블 업로드 완료 (575행)\n",
-      "recipe_process_clean 테이블 업로드 완료 (575행)\n",
       "recipe 테이블 업로드 완료 (537행)\n"
      ]
     }
@@ -259,8 +221,6 @@
     "\n",
     "# CSV 파일 목록\n",
     "files = {\n",
-    "    'recipe_ingredient_clean': 'recipe_ingredient_clean.csv',\n",
-    "    'recipe_process_clean': 'recipe_process_clean.csv',\n",
     "    'recipe': 'recipe.csv'\n",
     "}\n",
     "\n",
