--- a/new_food_data/ingredient_전처리.ipynb
+++ b/new_food_data/ingredient_전처리.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "1cba79df",
    "metadata": {},
    "outputs": [
@@ -93,6 +93,9 @@
     "        # ----------------------------------\n",
     "        self.description_patterns = [\n",
     "            # 신규·보강 규칙\n",
+    "            (r'.*김치.*', '김치'),\n",
+    "            (r'^(?=.*김)(?!.*튀김가루)(?!.*김치).*$', '김'),\n",
+    "            (r'.*베이컨.*', '베이컨'),\n",
     "            (r'.*이태리[ ]*파슬리.*', '파슬리'),\n",
     "            (r'.*(핫케이크[ ]*가루|핫케이크가루|핫케익가루|핫케잌가루).*', '핫케이크가루'),\n",
     "            (r'.*크랜베리.*', '건크랜베리'),\n",
@@ -174,7 +177,7 @@
     "            # 새우/게류\n",
     "            (r'.*건새우.*', '건새우'),\n",
     "            (r'(?<!건).*새우.*', '새우'),\n",
-    "            (r'.*게.*|.*꽃게.*', '게'),\n",
+    "            (r'(?=.*게)(?!.*스파게티).*', '게'),\n",
     "\n",
     "            # 소고기 세부 부위\n",
     "            (r'.*소고기불고기.*|.*한우.*소고기불고기.*', '소고기_불고기'),\n",
@@ -198,6 +201,7 @@
     "            (r'.*떡볶이.*', '떡볶이 떡'),\n",
     "            (r'.*우동.*', '우동사리'),\n",
     "            (r'.*칼국수.*', '칼국수면'),\n",
+    "            (r'.*스파게티[ ]*면.*', '파스타면'),\n",
     "\n",
     "            # 해산물·일반 재료\n",
     "            (r'.*해물.*', '해물'),\n",
@@ -237,7 +241,7 @@
     "            (r'.*(밀가루|중력분|박력분).*', '밀가루'),\n",
     "\n",
     "            # 떡류\n",
-    "            (r'.*떡볶이.*', '떡볶이 떡'),\n",
+    "            (r'.*떡볶이.*', '떡볶이떡'),\n",
     "            (r'.*(떡국[ ]*떡|떡국용[ ]*떡|떡국용떡).*', '떡국떡'),\n",
     "\n",
     "            # 기타 재료\n",
@@ -400,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "24dfc804",
    "metadata": {},
    "outputs": [
@@ -450,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "0520c6bc",
    "metadata": {},
    "outputs": [
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "dd70134b",
    "metadata": {},
    "outputs": [
@@ -522,7 +526,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Updating recipes: 100%|██████████| 1829/1829 [00:15<00:00, 114.46it/s]"
+      "Updating recipes: 100%|██████████| 1829/1829 [00:13<00:00, 131.31it/s]"
      ]
     },
     {
@@ -613,7 +617,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hipython",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -627,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
