--- a/new_food_data/재료적재.ipynb
+++ b/new_food_data/재료적재.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "35b526b2",
    "metadata": {},
    "outputs": [
@@ -15,7 +15,7 @@
       "1  {\"버섯\": \"2개\", \"버터\": \"30g\", \"채소\": null, \"간장\": \"1...\n",
       "2  {\"풋고추\": \"10개\", \"된장\": \"2T\", \"마늘\": \"1/3T\", \"파\": ...\n",
       "3  {\"베이컨\": null, \"파\": null, \"떡\": null, \"간장\": null...\n",
-      "4  {\"오이\": \"7개\", \"쌈장\": \"1T\", \"고춧가루\": \"1/2T\", \"올리고당...\n",
+      "4  {\"오이\": \"6 7개\", \"쌈장\": \"1T\", \"고추가루\": \"1/2T\", \"올리...\n",
       "✅ DB에서 ingredient_full 컬럼 불러오기 완료 → ingredient_full_from_db.csv\n"
      ]
     }
@@ -28,7 +28,7 @@
     "engine = create_engine('mysql+pymysql://lgup3:lgup3P%40ssw0rd@211.51.163.232:19306/lgup3')\n",
     "\n",
     "# 2️⃣ 컬럼만 불러오기\n",
-    "df = pd.read_sql(\"SELECT ingredient_full FROM recipe;\", con=engine)\n",
+    "df = pd.read_sql(\"SELECT ingredient_full FROM recipe_backup;\", con=engine)\n",
     "\n",
     "# 3️⃣ 확인\n",
     "print(df.head())\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "82fdfc20",
    "metadata": {},
    "outputs": [
@@ -49,8 +49,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 총 636개의 고유 재료명 추출 완료!\n",
-      "['LA갈비', 'PN멀티팟', '가래떡', '가리비', '가쓰오부시', '가자미', '가지', '가쯔오장국', '간장', '갈비', '갈치', '감자', '감초', '강력분', '건고추', '건다시마', '건대추', '건크랜베리', '건포도', '건홍합', '검은콩', '게', '겨자', '견과류', '계란', '계피가루', '고구마', '고기', '고등어', '고사리']\n",
+      "✅ 총 692개의 고유 재료명 추출 완료!\n",
+      "['LA갈비', 'PN멀티팟', '가래떡', '가리비', '가쓰오부시', '가자미', '가지', '가지 약', '가쯔오장국', '간장', '간장 진양조간장', '갈비', '갈치', '감자', '감초', '강력분', '건고추', '건다시마', '건대추', '건크랜베리', '건포도', '건홍합', '검은콩', '게', '겨자', '견과류', '견과류 아몬드or땅콩 생략 가능', '계란', '계피가루', '고구마']\n",
       "📂 고유 재료명 저장 완료 → unique_ingredient_keys.csv\n"
      ]
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "3edbd945",
    "metadata": {},
    "outputs": [
@@ -107,8 +107,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📦 recipe 테이블에서 1784개 행 로드 완료\n",
-      "✅ 총 304개의 고유 재료명 추출 완료 → unique_ingredients_clean.csv\n"
+      "📦 recipe 테이블에서 1697개 행 로드 완료\n",
+      "✅ 총 328개의 고유 재료명 추출 완료 → unique_ingredients_clean.csv\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "a83b9b45",
    "metadata": {},
    "outputs": [
@@ -201,14 +201,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🔍 Checking & Inserting: 100%|██████████| 305/305 [00:01<00:00, 177.57it/s]"
+      "🔍 Checking & Inserting: 100%|██████████| 329/329 [00:00<00:00, 905.75it/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 새로 추가된 재료: 304개\n"
+      "✅ 새로 추가된 재료: 44개\n"
      ]
     },
     {
@@ -282,7 +282,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hipython",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -296,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
